# foxriver

./: CMakeLists.txt  README.md
conf/: foxriver.conf
dict/: location.utf8  time.utf8
src/: CMakeLists.txt  ReqHandler.hpp  WordAssembler.hpp  main.cpp
src/CppJieba/: MPSegment.hpp
test/unittest/: CMakeLists.txt  TWordAssembler.cpp
